refactor(sonar): fix 154/158 SonarQube issues — track sonarqube_cleanup_20260519
- S1192 (61x): extract duplicate string literals to private static final constants in 16 controllers and 10 services
- S6813 (12x): constructor injection in UsuarioService, AlumnoController, SecurityConfig
- S1068 (5x): remove unused private fields in SecurityConfig, CentroAdminAlumnoService, CentroAdminGrupoService
- S6809 (5x): fix @Transactional self-invocation via extracted private helpers
- S1948 (2x): serialVersionUID + transient in ModuloImportException, UsuarioImportException
- S6204 (7x): .collect(Collectors.toList()) replaced by .toList()
- S3776 (2x): reduce cognitive complexity by extracting private methods
- S2629 (2x): SLF4J lazy placeholders in SecurityAuditLogger
- S5976, S6068x11, S1128x4, S5838x3, S5853x2, S6353x2, S6126, S1066x2, S1186, S1130, S1126, S135, S1481, S1854, S5786x25: all minor/info fixes
- FASE 7 (S6833): not applicable - mixed controllers cannot change to @RestController without splitting
- 493 tests, 0 failures

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>